--- a/Magda.html
+++ b/Magda.html
@@ -7,6 +7,6 @@
 </head>
 
   <body>
-    <H1>Strona Magdy</H1>
+    <H1 style="text-align: center">Strona <span style="color: purple;">Magdy</span></H1>
   </body>
 </html>
