--- a/Magda.html
+++ b/Magda.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>N&M</title>
-  <link rel="icon" type="image/x-icon"  href="strawberry.ico">
+  <link rel="icon" type="image/x-icon"  href="velvethome.github.io/Strawberry.ico">
 <meta charset="UTF-8">  
 </head>
 
