--- a/Magda.html
+++ b/Magda.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>N&M</title>
+  <title>T&M</title>
   <link rel="icon" type="image/x-icon"  href="https://witoldaksamit-ui.github.io/velvethome.github.io//Strawberry.ico">
 <meta charset="UTF-8">  
 </head>
