--- a/Magda.html
+++ b/Magda.html
@@ -7,8 +7,8 @@
 </head>
 
   <body>
-    <p>*ੈ✩‧₊˚༺☆༻*ੈ✩‧₊˚</p>
-    <H1 style="text-align: center">Strona <span style="color: purple;">Magdy</span></H1>
+    <H1 tyle="text-align: center">Strona <span style="color: purple;">Magdy</span></H1>
+        <p>*ੈ✩‧₊˚༺☆༻*ੈ✩‧₊˚</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/B0YTEC42sh4?si=8-MIQyGmBxYbBS5K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
