--- a/Magda.html
+++ b/Magda.html
@@ -8,7 +8,9 @@
 
   <body>
     <H1><center>Strona <span style="color: purple;">Magdy</span></center></H1>
-        <p><center>*ੈ✩‧₊˚༺☆༻*ੈ✩‧₊˚</center></p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/B0YTEC42sh4?si=8-MIQyGmBxYbBS5K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p><center>*ੈ✩‧₊˚༺☆༻*ੈ✩‧₊˚</center></p>
+    <div style="display: flex; justify-content: center;">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/B0YTEC42sh4?si=8-MIQyGmBxYbBS5K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
   </body>
 </html>
