--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Temperature — Last 24 Hours</title>
+  <link rel="icon" type="image/png" href="https://witoldaksamit-ui.github.io/velvethome.github.io/thermometer.png">
   <style>
     body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin: 20px; color: #111; }
     header { display:flex; align-items:center; gap:16px; margin-bottom:12px; }
